Fix layout issues in game page
- Responsive handling of columns

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -367,13 +367,13 @@ a:focus {
 }
 /* Card Box */
 .card-box {
-  padding: 20px;
+  padding: 17px;
   border: 1px solid rgba(54, 64, 74, 0.05);
   -webkit-border-radius: 5px;
   border-radius: 5px;
   -moz-border-radius: 5px;
   background-clip: padding-box;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
   background-color: #ffffff;
 }
 /* Grid page */
